--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "framer-motion": "^12.4.3",
+    "lru-cache": "^10.4.3",
     "next": "15.1.7",
+    "next-intl": "^3.26.3",
+    "node-cache": "^5.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "swr": "^2.3.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
