--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^12.4.3",
+    "jsonwebtoken": "^9.0.2",
     "lru-cache": "^10.4.3",
     "next": "15.1.7",
     "next-intl": "^3.26.3",
@@ -22,6 +24,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
