fix: github actions yaml

--- a/.github/workflows/auto_redeploy.yaml
+++ b/.github/workflows/auto_redeploy.yaml
@@ -8,9 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      max-attempts: 2
+    retries: 2
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
