--- a/.github/workflows/auto_redeploy.yaml
+++ b/.github/workflows/auto_redeploy.yaml
@@ -8,7 +8,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    retries: 2
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -16,14 +15,12 @@ jobs:
       - name: Wait before deploy (10 seconds)
         run: sleep 10
 
-      - name: Deploy to Vercel
+      - name: Deploy to Vercel (with retry)
         run: |
-          npx vercel --prod --token $VERCEL_TOKEN --confirm
+          for i in {1..2}; do
+            npx vercel --prod --token $VERCEL_TOKEN --confirm && break || sleep 60
+          done
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-
-      - name: Wait before retry (60 seconds)
-        if: failure()
-        run: sleep 60
